--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,5 +1,5 @@
-$PurpleLight: #302d43;
+$purpleLight: #302d43;
 $purpleDark: #282639;
-$neonGreen: #92CF48;
-$lightGrey: #FAF6F9;
-$darkGrey: #EAEDF3;
+$greenNeon: #92cf48;
+$greyLight: #faf6f9;
+$greyDark: #eaedf3;
