--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");
 @import "reset";
 @import "variables";
+@import "content-area";
 
 body {
   font-family: "Roboto", sans-serif;
@@ -83,7 +84,7 @@ header {
       font-weight: 100;
       width: 80%;
       outline: none;
-      transition: all 0.5 ease-in-out;
+      transition: all 0.5s ease-in-out;
       &:hover {
         background: $greyLight;
       }
